--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ ul {
     row-gap: 10px;
 }
 
-.upper-article {
+.upper-article, .lower-article {
     border: 2px solid blue;
+}
+
+.main {
+    border: 2px solid red;
 }
